--- a/organizador/templates/organizador/lista_persona.html
+++ b/organizador/templates/organizador/lista_persona.html
@@ -4,12 +4,18 @@
 
 
     <h3>Lista de Personas</h3>
+
+    <a href={% url 'nueva_persona' %} class="btn btn-primary">Crear persona</a>
+    <br>
+    <br>
+
     <table class="table table-striped table-hover table-bordered" class="tabla">
       <thead>
         <tr>
           <th>No.</th>
           <th>Nombre</th>
           <th>Apellido</th>
+          <th></th>
           <th></th>
         </tr>
 
@@ -18,7 +24,8 @@
         <td>{{p.pk}}</td>
         <td>{{p.nombre}}</td>
         <td>{{p.apellido}}</td>
-        <td>   <a href={% url 'lista_persona' %} class="btn btn-primary">Ver detalle</a>  </td>
+        <td><a href="{% url 'editar_persona' pk=p.pk %}" class="btn btn-primary">Editar</a></td>
+        <td><a href="{% url 'eliminar_persona' pk=p.pk %}" class="btn btn-primary">Eliminar</a></td>
         </tr>
 {% endfor %}
     </thead>
