--- a/organizador/templates/organizador/base.html
+++ b/organizador/templates/organizador/base.html
@@ -23,6 +23,7 @@
 
         <a href={% url 'lista_persona' %} class="btn btn-primary">Personas</a>
         <a href={% url 'lista_actividad' %} class="btn btn-success">Actividades</a>
+        <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"> Ingresar</span></a>
 
 
         <div>
