--- a/organizador/templates/organizador/lista_persona.html
+++ b/organizador/templates/organizador/lista_persona.html
@@ -5,31 +5,66 @@
 
     <h3>Lista de Personas</h3>
 
-    <a href={% url 'nueva_persona' %} class="btn btn-primary">Crear persona</a>
-    <br>
-    <br>
 
-    <table class="table table-striped table-hover table-bordered" class="tabla">
-      <thead>
-        <tr>
-          <th>No.</th>
-          <th>Nombre</th>
-          <th>Apellido</th>
-          <th></th>
-          <th></th>
-        </tr>
+
+
+
+
+
+
+
+{% if user.is_authenticated %}
+
+      <a href={% url 'nueva_persona' %} class="btn btn-primary">Crear persona</a>
+      <br>
+      <br>
+
+      <table class="table table-striped table-hover table-bordered" class="tabla">
+        <thead>
+          <tr>
+            <th>No.</th>
+            <th>Nombre</th>
+            <th>Apellido</th>
+            <th></th>
+            <th></th>
+          </tr>
 
   {% for p in personas %}
-        <tr>
-        <td>{{p.pk}}</td>
-        <td>{{p.nombre}}</td>
-        <td>{{p.apellido}}</td>
-        <td><a href="{% url 'editar_persona' pk=p.pk %}" class="btn btn-primary">Editar</a></td>
-        <td><a href="{% url 'eliminar_persona' pk=p.pk %}" class="btn btn-primary">Eliminar</a></td>
-        </tr>
-{% endfor %}
-    </thead>
-    </table>
+          <tr>
+          <td>{{p.pk}}</td>
+          <td>{{p.nombre}}</td>
+          <td>{{p.apellido}}</td>
+          <td><a href="{% url 'editar_persona' pk=p.pk %}" class="btn btn-primary">Editar</a></td>
+          <td><a href="{% url 'eliminar_persona' pk=p.pk %}" class="btn btn-primary">Eliminar</a></td>
+          </tr>
+  {% endfor %}
+      </thead>
+      </table>
+
+{% else %}
+  <table class="table table-striped table-hover table-bordered" class="tabla">
+    <thead>
+      <tr>
+        <th>No.</th>
+        <th>Nombre</th>
+        <th>Apellido</th>
+      </tr>
+
+  {% for p in personas %}
+      <tr>
+      <td>{{p.pk}}</td>
+      <td>{{p.nombre}}</td>
+      <td>{{p.apellido}}</td>
+      </tr>
+  {% endfor %}
+  </thead>
+  </table>
+
+
+{% endif %}
+
+
+
 
 
   {% endblock content %}
