--- a/organizador/templates/organizador/lista_actividad.html
+++ b/organizador/templates/organizador/lista_actividad.html
@@ -5,7 +5,8 @@
 
     <h3>Lista de Actividades</h3>
 
-    <a href={% url 'nueva_actividad' %} class="btn btn-success">Crear actividad</a>
+{% if user.is_authenticated %}
+    <a href={% url 'nueva_actividad' %} class="btn btn-success"><span class="glyphicon glyphicon-plus"></span>Nueva</a>
     <br>
     <br>
 
@@ -28,14 +29,36 @@
         <td>{{a.descripcion}}</td>
         <td>{{a.fecha}}</td>
         <td>{{a.hora}}</td>
-        <td><a href="{% url 'editar_actividad' pk=a.pk %}" class="btn btn-primary">Editar</a></td>
-        <td><a href="{% url 'eliminar_actividad' pk=a.pk %}" class="btn btn-primary">Eliminar</a></td>
-
+        <td><a href="{% url 'editar_actividad' pk=a.pk %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span> Editar</a></td>
+        <td><a href="{% url 'eliminar_actividad' pk=a.pk %}" class="btn btn-success">Eliminar</a></td>
         </tr>
     {% endfor %}
     </thead>
     </table>
+{% else %}
 
+    <table class="table table-striped table-hover table-bordered" class="tabla">
+      <thead>
+        <tr>
+          <th>No.</th>
+          <th>Nombre</th>
+          <th>Descripcion</th>
+          <th>Fecha</th>
+          <th>Hora</th>
+        </tr>
+
+    {% for a in actividades %}
+        <tr>
+        <td>{{a.pk}}</td>
+        <td>{{a.nombre}}</td>
+        <td>{{a.descripcion}}</td>
+        <td>{{a.fecha}}</td>
+        <td>{{a.hora}}</td>
+        </tr>
+    {% endfor %}
+    </thead>
+    </table>
+{% endif %}
 
 
 
