--- a/organizador/templates/organizador/lista_persona.html
+++ b/organizador/templates/organizador/lista_persona.html
@@ -1,24 +1,14 @@
 {% extends 'organizador/base_persona.html' %}
-
 {% block content %}
 
 
     <h3>Lista de Personas</h3>
 
-
-
-
-
-
-
-
-
 {% if user.is_authenticated %}
 
-      <a href={% url 'nueva_persona' %} class="btn btn-primary">Crear persona</a>
+      <a href={% url 'nueva_persona' %} class="btn btn-primary"><span class="glyphicon glyphicon-plus"></span>Nueva</a>
       <br>
       <br>
-
       <table class="table table-striped table-hover table-bordered" class="tabla">
         <thead>
           <tr>
@@ -29,12 +19,13 @@
             <th></th>
           </tr>
 
+
   {% for p in personas %}
           <tr>
           <td>{{p.pk}}</td>
           <td>{{p.nombre}}</td>
           <td>{{p.apellido}}</td>
-          <td><a href="{% url 'editar_persona' pk=p.pk %}" class="btn btn-primary">Editar</a></td>
+          <td><a href="{% url 'editar_persona' pk=p.pk %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span> Editar</a></td>
           <td><a href="{% url 'eliminar_persona' pk=p.pk %}" class="btn btn-primary">Eliminar</a></td>
           </tr>
   {% endfor %}
@@ -67,4 +58,4 @@
 
 
 
-  {% endblock content %}
+{% endblock content %}
