--- a/organizador/templates/registration/login.html
+++ b/organizador/templates/registration/login.html
@@ -5,6 +5,8 @@
         <p>Your username and password didn't match. Please try again.</p>
     {% endif %}
 
+    <div align="center">
+      <br><br><br>
     <form method="post" action="{% url 'login' %}">
     {% csrf_token %}
         <table>
@@ -12,13 +14,17 @@
             <td>{{ form.username.label_tag }}</td>
             <td><font color="black">{{ form.username }}</font></td>
         </tr>
+       <tr>
+         <br><br><br>
+       </tr>
         <tr>
             <td>{{ form.password.label_tag }}</td>
             <td><font color="black">{{ form.password }}</font></td>
         </tr>
         </table>
 
-        <input type="submit" value="login" />
+        <input type="submit" value="Ingresar" class="btn btn-primary" />
         <input type="hidden" name="next" value="{{ next }}" />
     </form>
+  </div>
 {% endblock %}
